--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
       </p>
       <div class="container container_serv">
         <div class="serv">
-          <a class="link" href="#">A</a>
+          <a class="link active" href="#"
+            ><img class="font" src="img/fa-font.png" alt=""
+          /></a>
           <h3>clean typography</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat
@@ -53,7 +55,9 @@
           </p>
         </div>
         <div class="serv">
-          <a class="link" href="#"></a>
+          <a class="link" href="#"
+            ><img class="code" src="img/fa-code.png" alt=""
+          /></a>
           <h3>rock solid code</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
@@ -62,7 +66,9 @@
           </p>
         </div>
         <div class="serv">
-          <a class="link" href="#"><img src="img/fa-support.png" alt="" /></a>
+          <a class="link" href="#"
+            ><img class="support" src="img/fa-support.png" alt=""
+          /></a>
           <h3>expert support</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
