--- a/index.html
+++ b/index.html
@@ -44,9 +44,7 @@
       </p>
       <div class="container container_serv">
         <div class="serv">
-          <a class="link active" href="#"
-            ><img class="font" src="img/fa-font.png" alt=""
-          /></a>
+          <div class="font"></div>
           <h3>clean typography</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat
@@ -55,9 +53,7 @@
           </p>
         </div>
         <div class="serv">
-          <a class="link" href="#"
-            ><img class="code" src="img/fa-code.png" alt=""
-          /></a>
+          <div class="code"></div>
           <h3>rock solid code</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
@@ -66,9 +62,7 @@
           </p>
         </div>
         <div class="serv">
-          <a class="link" href="#"
-            ><img class="support" src="img/fa-support.png" alt=""
-          /></a>
+          <div class="support"></div>
           <h3>expert support</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
