--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
       </div>
     </section>
     <section class="services">
-      <header class="header_services">
-        <h2>services</h2>
-      </header>
+      <h2 class="title_services">services</h2>
       <p class="description">
         We offer ipsum dolor sit amet, consetetur sadipscing elitr amet
       </p>
